WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133355
[Cocoa] Crash when trying to decode an instance of a class inheriting from WKObject
https://bugs.webkit.org/show_bug.cgi?id=133355
Summary
[Cocoa] Crash when trying to decode an instance of a class inheriting from WK...
mitz
Reported
2014-05-28 13:20:32 PDT
[Cocoa] Crash when trying to decode an instance of a class inheriting from WKObject
Attachments
Forward -classForCoder and -classForKeyedArchiver to the target object
(1.40 KB, patch)
2014-05-28 13:22 PDT
,
mitz
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2014-05-28 13:22:14 PDT
Created
attachment 232210
[details]
Forward -classForCoder and -classForKeyedArchiver to the target object
mitz
Comment 2
2014-05-28 13:27:06 PDT
Fixed in <
http://trac.webkit.org/r169432
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug