[Cocoa] Crash when trying to decode an instance of a class inheriting from WKObject https://bugs.webkit.org/show_bug.cgi?id=133355

Reviewed by Anders Carlsson.

* Shared/Cocoa/WKObject.mm:
(-[WKObject classForCoder]): Override this NSObject method to forward to the
target object.
(-[WKObject classForKeyedArchiver]): Ditto.



Canonical link: https://commits.webkit.org/151383@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169432 268f45cc-cd09-0410-ab3c-d52691b4dbfc